--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://partnerdetailers.github.io/Interior-Car-Detailing-What-It-Includes-and-Why-It-Matters/">https://partnerdetailers.github.io/Interior-Car-Detailing-What-It-Includes-and-Why-It-Matters/</a><br>
+                <a target="_bLank" href="https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Interior+Car+Detailing:+What+It+Includes+and+Why+It+Matters/index.html">https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Interior+Car+Detailing:+What+It+Includes+and+Why+It+Matters/index.html</a><br>
+                <a target="_bLank" href="https://interior-car-detailing-wha-git-224aa7-partnerdetailers-projects.vercel.app/">https://interior-car-detailing-wha-git-224aa7-partnerdetailers-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://frolicking-donut-e7573f.netlify.app/">https://frolicking-donut-e7573f.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
